--- a/estilos/style.css
+++ b/estilos/style.css
@@ -30,3 +30,12 @@ html, body{
     background: url(../pacote-d013/imagens/frame-iphone.png);
     
  }
+ 
+ .tela{
+    position: relative;
+    top: 80px;
+    left: 22px;
+    width: 269px;
+    height: 471px;
+ }
+}
